Set theme variables

--- a/public_html/sites/all/themes/fki/bower.json
+++ b/public_html/sites/all/themes/fki/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "fki.dk",
+  "name": "intranet.fredericia.dk",
   "description": "Website",
   "version": "0.0.1",
   "dependencies": {
