--- a/public_html/sites/all/themes/fki/package.json
+++ b/public_html/sites/all/themes/fki/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "fki.dk",
+    "name": "intranet.fredericia.dk",
     "version": "0.0.1",
     "description": "Base Grunt setup.",
     "main": "index.js",
