--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,5 @@ share
 # Files that might appear on external disks
 .Spotlight-V100
 .Trashes
+public_html/sites/fredericia-newintra.dd
+public_html/sites/fk-os2intra.dd
