Ignore local devsite

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ public_html/sites/fkintra22okt.dd
 vendor/composer/autoload_classmap.php
 vendor/composer/autoload_namespaces.php
 vendor/composer/autoload_psr4.php
+public_html/sites/fkintra23okt.dd
