--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,4 @@ vendor/composer/autoload_classmap.php
 vendor/composer/autoload_namespaces.php
 vendor/composer/autoload_psr4.php
 public_html/sites/fkintra23okt.dd
+public_html/sites/fkintra26okt.dd
