--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ vendor/composer/autoload_namespaces.php
 vendor/composer/autoload_psr4.php
 public_html/sites/fkintra23okt.dd
 public_html/sites/fkintra26okt.dd
+public_html/sites/kfintra-26okt-3.dd
