Ignore lokal dev

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ vendor/composer/autoload_psr4.php
 public_html/sites/fkintra23okt.dd
 public_html/sites/fkintra26okt.dd
 public_html/sites/kfintra-26okt-3.dd
+public_html/sites/fkintra-26okt-5.dd
