--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,5 @@ public_html/sites/fkintra23okt.dd
 public_html/sites/fkintra26okt.dd
 public_html/sites/kfintra-26okt-3.dd
 public_html/sites/fkintra-26okt-5.dd
+public_html/sites/*.dd
+
