--- a/.gitignore
+++ b/.gitignore
@@ -48,17 +48,14 @@ share
 # Files that might appear on external disks
 .Spotlight-V100
 .Trashes
-public_html/sites/fredericia-newintra.dd
-public_html/sites/fk-os2intra.dd
-public_html/sites/fkintra22okt.dd
+
+# developer sites
+public_html/sites/*.dd
 
 # Composer generated files
-vendor/composer/autoload_classmap.php
-vendor/composer/autoload_namespaces.php
-vendor/composer/autoload_psr4.php
-public_html/sites/fkintra23okt.dd
-public_html/sites/fkintra26okt.dd
-public_html/sites/kfintra-26okt-3.dd
-public_html/sites/fkintra-26okt-5.dd
-public_html/sites/*.dd
+#vendor/composer/autoload_classmap.php
+#vendor/composer/autoload_namespaces.php
+#vendor/composer/autoload_psr4.php
+
+
 
