--- a/public_html/profiles/os2intra/themes/fki/bower.json
+++ b/public_html/profiles/os2intra/themes/fki/bower.json
@@ -5,14 +5,11 @@
   "dependencies": {
     "bootstrap": "~3.*",
     "bs3-designer": "~0.*",
-    "bs3-masonry": "~0.*",
+    "bs3-sidebar": "~0.*",
     "fastclick": "~1.*",
     "fontawesome": "~4.*",
     "html5shiv": "~3.*",
-    "imagesloaded": "~3.1.*",
-    "masonry": "~3.3.*",
-    "respond": "~1.*",
-    "select2-bootstrap-css": "~1.4.6"
+    "respond": "~1.*"
   },
   "ignore": [
     "bower_components"
