--- a/public_html/profiles/os2intra/themes/fki/src/grunt/config.json
+++ b/public_html/profiles/os2intra/themes/fki/src/grunt/config.json
@@ -25,6 +25,7 @@
       "src/vendor/jquery-placeholder/jquery.placeholder.js",
       "src/vendor/jquery.cookie/jquery.cookie.js",
       "src/vendor/fastclick/lib/fastclick.js",
+      "src/js/bs3Alert.js",
       "src/js/init.js"
     ],
     "jsIe9": [
