--- a/public_html/profiles/os2intra/themes/fki/bower.json
+++ b/public_html/profiles/os2intra/themes/fki/bower.json
@@ -3,7 +3,7 @@
   "description": "Website",
   "version": "0.0.1",
   "dependencies": {
-    "bootstrap": "~3.*",
+    "bootstrap": "~3.3.5",
     "bs3-designer": "~0.*",
     "bs3-sidebar": "~0.*",
     "fastclick": "~1.*",
