Allow Letsencrypt access to .well-known dir

--- a/public_html/.htaccess
+++ b/public_html/.htaccess
@@ -80,6 +80,8 @@ DirectoryIndex index.php index.html index.htm
   # If you do not have mod_rewrite installed, you should remove these
   # directories from your webroot or otherwise protect them from being
   # downloaded.
+  # allow access to .well-known for Letsencrypt SSL certs, mmh 23-02-2016
+  RewriteRule "^.well-known/acme-challenge" - [L]
   RewriteRule "(^|/)\." - [F]
 
   # If your site can be accessed both with and without the 'www.' prefix, you
