--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,7 @@ d7
 
 # dompdf log
 public_html/profiles/os2intra/libraries/dompdf/lib/fonts/log.htm
+
+# Andre filer:
+public_html/sites/all/modules/push_notifications/certificates/*.pem
+scripts/user_search.php
