--- a/public_html/profiles/os2intra/themes/fki/package.json
+++ b/public_html/profiles/os2intra/themes/fki/package.json
@@ -1,25 +1,23 @@
 {
-    "name": "intranet.fredericia.dk",
-    "version": "0.0.1",
-    "description": "Base Grunt setup.",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "Morten Nissen <mn@bellcom.dk>",
-    "license": "MIT",
-    "dependencies": {
-        "grunt": "^1.0.1",
-        "grunt-autoprefixer": "~3.0.3",
-        "grunt-jscs": "~3.0.1",
-        "grunt-contrib-concat": "~1.0.1",
-        "grunt-contrib-csslint": "~1.0.0",
-        "grunt-contrib-clean": "~1.0.0",
-        "grunt-contrib-jshint": "~1.0.0",
-        "grunt-contrib-less": "^1.0.1",
-        "grunt-contrib-watch": "^1.0.0"
-    },
-    "devDependencies": {
-        "grunt-modernizr": "^1.0.2"
-    }
+  "private": true,
+  "scripts": {
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=development grunt build",
+    "watch": "cross-env NODE_ENV=development grunt watch",
+    "prod": "npm run production",
+    "production": "cross-env NODE_ENV=production"
+  },
+  "devDependencies": {
+    "cross-env": "^5.1.3",
+    "grunt": "^1.0.2",
+    "grunt-autoprefixer": "~3.0.4",
+    "grunt-jscs": "~3.0.1",
+    "grunt-contrib-concat": "~1.0.1",
+    "grunt-contrib-csslint": "~2.0.0",
+    "grunt-contrib-clean": "~1.1.0",
+    "grunt-contrib-jshint": "~1.1.0",
+    "grunt-contrib-less": "^1.4.1",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-modernizr": "^1.0.2"
+  }
 }
