--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ _site
 *.vi
 *.zip
 *~
+*.sql
+*.tgz
 
 # OS or Editor folders
 ._*
@@ -48,6 +50,9 @@ import
 private
 others
 simplesamlphp
+/public_html/sites/all/translations
+/bi
+/bi_pdf*
 
 # Files that might appear on external disks
 .Spotlight-V100
